fixed google maps not showing centred

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,3 +18,6 @@ body {
 img {
     @apply w-full h-auto;
 }
+#iframe-page {
+    margin-left: -10px;
+}
